@@ -5,36 +5,36 @@
  *
  * @author Sam Reid
  */
-define( function ( require ) {
+define( function( require ) {
   "use strict";
 
   var Node = require( 'SCENERY/nodes/Node' );
   var HBox = require( 'SCENERY/nodes/HBox' );
   var Text = require( 'SCENERY/nodes/Text' );
   var inherit = require( 'PHET_CORE/inherit' );
-  var Layout = require( 'JOIST/Layout' );
+  var TabView = require( 'JOIST/TabView' );
   var Rectangle = require( 'SCENERY/nodes/Rectangle' );
 
-  var HEIGHT = 110;
+  var HEIGHT = 70;
 
   function HomeScreen( title, tabs, model ) {
     var homeScreen = this;
-    Node.call( this );
+    TabView.call( this );
 
     this.backgroundColor = 'black';
 
     //iPad doesn't support Century Gothic, so fall back to Futura, see http://wordpress.org/support/topic/font-not-working-on-ipad-browser
-    this.textLabel = new Text( title, {fontSize: 52, fontFamily: 'Century Gothic, Futura', fill: 'white', y: 140, centerX: 981 / 2} );
+    this.textLabel = new Text( title, {fontSize: 52, fontFamily: 'Century Gothic, Futura', fill: 'white', y: 140, centerX: this.layoutBounds.width / 2} );
     this.phetLabel = new Text( "PhET", {fontSize: 36, fill: 'yellow', top: 5, left: 5} );
     this.addChild( this.textLabel );
     this.addChild( this.phetLabel );
 
     var index = 0;
-    var tabChildren = _.map( tabs, function ( tab ) {
+    var tabChildren = _.map( tabs, function( tab ) {
       tab.index = index++;
       var child = new Node( {children: [tab.icon]} );
-      child.smallTextLabel = new Text( tab.name, {fontSize: 36, fill: 'gray'} );
-      child.largeTextLabel = new Text( tab.name, {fontSize: 52, fill: 'yellow'} );
+      child.smallTextLabel = new Text( tab.name, {fontSize: 26, fill: 'gray'} );
+      child.largeTextLabel = new Text( tab.name, {fontSize: 42, fill: 'yellow'} );
       homeScreen.addChild( child.smallTextLabel );
       homeScreen.addChild( child.largeTextLabel );
       child.scale( HEIGHT / tab.icon.height );
@@ -42,7 +42,7 @@ define( function ( require ) {
       child.tab = tab;
 
       //Tap once to select, a second time to start that tab
-      child.addInputListener( { down: function () {
+      child.addInputListener( { down: function() {
         if ( model.tabIndex === tab.index ) {
           model.showHomeScreen = false;
         }
@@ -57,7 +57,7 @@ define( function ( require ) {
       this.addChild( tabChildren[i] );
     }
 
-    model.link( 'tabIndex', function ( tabIndex ) {
+    model.link( 'tabIndex', function( tabIndex ) {
       for ( var i = 0; i < tabChildren.length; i++ ) {
         var child = tabChildren[i];
         child.invalidateBounds();
@@ -76,12 +76,12 @@ define( function ( require ) {
       var spacing = 41 / 1.25;
       width = width + spacing * (tabChildren.length - 1);
 
-      var x = Layout.width / 2 - width / 2;
+      var x = homeScreen.layoutBounds.width / 2 - width / 2;
 
       for ( var i = 0; i < tabChildren.length; i++ ) {
         var child = tabChildren[i];
         child.x = x;
-        child.y = Layout.height / 2 - 111 / 1.25;
+        child.y = homeScreen.layoutBounds.height / 2 - 111 / 1.25;
         x += child.width + spacing;
         child.largeTextLabel.visible = child.selected;
         child.smallTextLabel.visible = !child.selected;
@@ -92,7 +92,7 @@ define( function ( require ) {
     } );
   }
 
-  inherit( HomeScreen, Node );
+  inherit( HomeScreen, TabView );
 
   return HomeScreen;
 } );
