@@ -7,7 +7,7 @@
  *
  * @author Sam Reid
  */
-define( function ( require ) {
+define( function( require ) {
   "use strict";
 
   var Node = require( 'SCENERY/nodes/Node' );
@@ -20,20 +20,14 @@ define( function ( require ) {
   var inherit = require( 'PHET_CORE/inherit' );
   var SimPopupMenu = require( 'JOIST/SimPopupMenu' );
 
-  function NavigationBar( tabs, model ) {
+  function NavigationBar( sim, tabs, model ) {
     var navigationBar = this;
     Node.call( this );
 
     //Space between the icons and the bottom of the play area
     var verticalPadding = 2;
 
-    //Vertical height of the nav bar
-    var height = Layout.navBarHeight;
-
     var fontSize = 36;
-
-    var background = new Rectangle( -Layout.width, 0, Layout.width * 3, height, {fill: 'black'} );
-    this.addChild( background );
 
     //Create the text labels once because in this version of Scenery (4/18/2013) they are expensive to create because they must be accurately sized.
     this.textLabel = new Node();
@@ -42,45 +36,38 @@ define( function ( require ) {
     var optionsButton = new BoundsNode( new FontAwesomeNode( 'reorder', {fill: '#fff'} ), {cursor: 'pointer'} );
 
     //Creating the popup menu dynamically (when needed) causes a temporary black screen on the iPad (perhaps because of canvas accurate text bounds)
-    var simPopupMenu = new SimPopupMenu();
+    var simPopupMenu = new SimPopupMenu( sim );
     optionsButton.addInputListener( {
                                       // mousedown or touchstart (pointer pressed down over the node)
-                                      down: function ( event ) {
-                                        var optionsButtonBounds = navigationBar.parents[0].boundsOf( optionsButton );
-                                        var overlay = new Rectangle( -1000, -1000, 3000, 3000, {fill: 'black', opacity: 0.5} );
-                                        var listener = { down: function () {
-                                          overlay.detach();
-                                          simPopupMenu.detach();
-                                        } };
-                                        overlay.addInputListener( listener );
-                                        simPopupMenu.addInputListener( listener );
-
-                                        simPopupMenu.right = optionsButtonBounds.maxX;
-                                        simPopupMenu.bottom = optionsButtonBounds.minY;
-                                        console.log( "rb", simPopupMenu.right, simPopupMenu.bottom );
-                                        navigationBar.parents[0].addChild( overlay );
-                                        navigationBar.parents[0].addChild( simPopupMenu );
+                                      down: function( event ) {
+                                        simPopupMenu.x = navigationBar.navBarWidth - simPopupMenu.width - 2;
+                                        simPopupMenu.y = window.innerHeight - simPopupMenu.height - navigationBar.height / 2 + 4;
+                                        var overlayScene = sim.createAndAddOverlay( simPopupMenu );
+                                        overlayScene.addInputListener( {down: function() {
+                                          sim.removeOverlay( overlayScene );
+                                        }} );
                                       }
                                     } );
 
-    this.addChild( new HBox( {spacing: 10, children: [phetLabel, optionsButton]} ).mutate( {right: Layout.width - 5, centerY: height / 2} ) );
+    this.phetLabelAndButton = new HBox( {spacing: 10, children: [phetLabel, optionsButton]} );
+    this.addChild( this.phetLabelAndButton );
 
     //Create the nodes to be used for the tab icons
     var index = 0;
-    var tabChildren = _.map( tabs, function ( tab ) {
+    var tabChildren = _.map( tabs, function( tab ) {
       tab.index = index++;
       var child = new Node( {children: [tab.icon], cursor: 'pointer'} );
       child.tab = tab;
-      child.scale( (height - verticalPadding * 2) / child.tab.icon.height );
+      child.scale( (100 - verticalPadding * 2) / child.tab.icon.height );
 
-      var textLabel = new Text( tab.name, {fontSize: 32, fill: 'black'} );
+      var textLabel = new Text( tab.name, {fontSize: 26, fill: 'black'} );
       var outline = new Rectangle( 0, 0, textLabel.width + 10, textLabel.height + 10, 10, 10, {fill: 'white'} );
       textLabel.centerX = outline.width / 2;
       textLabel.centerY = outline.height / 2;
       outline.addChild( textLabel );
 
       child.largeTextLabel = outline;
-      child.addInputListener( { down: function () {
+      child.addInputListener( { down: function() {
         model.tabIndex = tab.index;
         model.showHomeScreen = false;
       }} );
@@ -100,15 +87,20 @@ define( function ( require ) {
     }
 
     //add the home icon
-    this.homeIcon = new BoundsNode( new FontAwesomeNode( 'home', {fill: '#fff'} ), {cursor: 'pointer'} ).mutate( {centerY: height / 2 } );
-    this.homeIcon.addInputListener( {down: function () { model.showHomeScreen = true; }} );
+    this.homeIcon = new BoundsNode( new FontAwesomeNode( 'home', {fill: '#fff'} ), {cursor: 'pointer'} );
+    this.homeIcon.addInputListener( {down: function() { model.showHomeScreen = true; }} );
     if ( tabs.length > 1 ) {
       this.addChild( this.homeIcon );
     }
 
-    //On initialization and when the tab changes, update the size of the icons and the layout of the icons and text
-    model.link( 'tabIndex', function ( tabIndex ) {
+    this.navBarHeight = 40;
+    this.navBarScale = 1;
+    this.navBarWidth = 768;
 
+    this.relayout = function() {
+      var height = this.navBarHeight;
+      console.log( height );
+      var tabIndex = navigationBar.tabIndex;
       //Update size and opacity of each icon
       var selectedChild = null;
       for ( var i = 0; i < tabChildren.length; i++ ) {
@@ -118,7 +110,8 @@ define( function ( require ) {
         child.selected = selected;
         child.opacity = selected ? 1 : 0.5;
         child.resetTransform();
-        child.scale( selected ? (height - verticalPadding * 2) / child.tab.icon.height : (height - verticalPadding * 2) / child.tab.icon.height * 0.75 );
+        var tabScale = selected ? (height - verticalPadding * 2) / child.tab.icon.height : (height - verticalPadding * 2) / child.tab.icon.height * 0.75;
+        child.scale( tabScale );
         child.largeTextLabel.visible = selected;
         if ( selected ) {
           selectedChild = child;
@@ -134,22 +127,47 @@ define( function ( require ) {
       var spacing = 10;
       width = width + spacing * (tabChildren.length - 1);
 
+      selectedChild.largeTextLabel.setScaleMagnitude( this.navBarScale );
+      selectedChild.largeTextLabel.centerY = this.navBarHeight / 2;
+
       //Lay out the components from left to right
       if ( tabs.length == 1 ) {
         selectedChild.largeTextLabel.left = 15;
       }
       else {
-        var x = Layout.width / 2 - width / 2;
+
+        //put the center right in the middle
+        var centerX = this.navBarWidth / 2;
+
+        var x = this.navBarWidth / 2 - width / 2;
         selectedChild.largeTextLabel.right = x - 25;
-        selectedChild.largeTextLabel.top = 0;
+
         for ( var i = 0; i < tabChildren.length; i++ ) {
           var child = tabChildren[i];
           child.x = x;
           child.y = verticalPadding;
           x += child.width + spacing;
         }
+        navigationBar.homeIcon.setScaleMagnitude( this.navBarScale );
+        navigationBar.homeIcon.centerY = this.navBarHeight / 2;
         navigationBar.homeIcon.left = x + 15;
       }
+      this.phetLabelAndButton.setScaleMagnitude( this.navBarScale );
+      this.phetLabelAndButton.right = this.navBarWidth - 5;
+      this.phetLabelAndButton.centerY = this.navBarHeight / 2;
+    };
+
+    this.layout = function( scale, width, height ) {
+      this.navBarScale = scale;
+      this.navBarWidth = width;
+      this.navBarHeight = height;
+      navigationBar.relayout();
+    };
+
+    //On initialization and when the tab changes, update the size of the icons and the layout of the icons and text
+    model.link( 'tabIndex', function( tabIndex ) {
+      navigationBar.tabIndex = tabIndex;
+      navigationBar.relayout();
     } );
   }
 
