@@ -7,13 +7,13 @@
  *
  * @author Sam Reid
  */
-define( function ( require ) {
+define( function( require ) {
   'use strict';
 
   var Fort = require( 'FORT/Fort' );
   var Util = require( 'SCENERY/util/Util' );
-  var NavigationBar = require( 'JOIST/NavigationBar' );
-  var HomeScreen = require( 'JOIST/HomeScreen' );
+  var NavigationBarScene = require( 'JOIST/NavigationBarScene' );
+  var HomeScreenScene = require( 'JOIST/HomeScreenScene' );
   var Scene = require( 'SCENERY/Scene' );
   var Node = require( 'SCENERY/nodes/Node' );
   var Layout = require( 'JOIST/Layout' );
@@ -27,6 +27,7 @@ define( function ( require ) {
    */
   function Sim( name, tabs, options ) {
     var sim = this;
+    this.overlays = [];
 
     //Set the HTML page title to the localized title
     //TODO: When a sim is embedded on a page, we shouldn't retitle the page
@@ -54,32 +55,36 @@ define( function ( require ) {
     //Create the scene
     sim.scene = new Scene( $simDiv, {allowDevicePixelRatioScaling: true} );
     sim.scene.initializeStandaloneEvents(); // sets up listeners on the document with preventDefault(), and forwards those events to our scene
-    sim.scene.resizeOnWindowResize(); // the scene gets resized to the full screen size
 
-    var homeScreen = new HomeScreen( name, tabs, sim.simModel );
-    var navigationBar = new NavigationBar( tabs, sim.simModel );
+    this.navigationBarScene = new NavigationBarScene( this, tabs, sim.simModel );
+    this.homeScreenScene = new HomeScreenScene( this, name, tabs, sim.simModel );
 
     //The simNode contains the home screen or the play area
     var simNode = new Node();
 
     //The viewContainer contains the TabView itself, which will be swapped out based on which icon the user selected in the navigation bar.
     //Without this layerSplit, the performance significantly declines on both Win8/Chrome and iPad3/Safari
+    //TODO: Test this after rewriting into multiple divs/scenes
     var viewContainer = new Node( {layerSplit: true} );
 
-    //TODO navigationBar must currently be behind play area or DOM elements will get no events
-    //The tabNode contains the viewContainer and the navigation bar
-    //Permit sims to put the navigation bar in the front with an option.  TODO: work on sims or framework to make this option unnecessary.
-    var tabNode = new Node( {children: options.navigationBarInFront ? [viewContainer, navigationBar] : [navigationBar, viewContainer]} );
     sim.scene.addChild( simNode );
 
-    var updateBackground = function () {
-      var color = sim.simModel.showHomeScreen ? homeScreen.backgroundColor : ( tabs[sim.simModel.tabIndex].backgroundColor || 'white' );
-      $simDiv.css( 'background', color );
+    var updateBackground = function() {
+//      var color = sim.simModel.showHomeScreen ? homeScreen.backgroundColor : ( tabs[sim.simModel.tabIndex].backgroundColor || 'white' );
+      $simDiv.css( 'background', tabs[sim.simModel.tabIndex].backgroundColor || 'white' );
     };
 
     //When the user presses the home icon, then show the home screen, otherwise show the tabNode.
-    this.simModel.link( 'showHomeScreen', function ( showHomeScreen ) {
-      simNode.children = [showHomeScreen ? homeScreen : tabNode];
+    this.simModel.link( 'showHomeScreen', function( showHomeScreen ) {
+      simNode.children = showHomeScreen ? [] : [viewContainer];
+      if ( showHomeScreen ) {
+        sim.navigationBarScene.$div.detach();
+        $( 'body' ).append( sim.homeScreenScene.$main );
+      }
+      else {
+        $( 'body' ).append( sim.navigationBarScene.$div );
+        sim.homeScreenScene.$main.detach();
+      }
       updateBackground();
     } );
 
@@ -89,36 +94,23 @@ define( function ( require ) {
       var width = $( window ).width();
       var height = $( window ).height();
 
-      //scale up the navigation bar according to the aspect ratio of the current tab (hopefully same throughout the sim!)
-      //TODO: how to enforce consistent size for navigation bar and home screen?
-      navigationBar.resetTransform();
-      var scale = sim.tabs[sim.simModel.tabIndex].view.getLayoutScale( width, height );
-      navigationBar.setScaleMagnitude( scale );
-      navigationBar.bottom = height;
-      navigationBar.centerX = width / 2;
+      //Use Mobile Safari layout bounds to size the home screen and navigation bar
+      var scale = Math.min( width / 768, height / 504 );
 
-      homeScreen.resetTransform();
-      homeScreen.setScaleMagnitude( scale );
-
-      //center vertically
-      if ( scale >= width / Layout.width ) {
-        homeScreen.translate( 0, (height - Layout.simHeight * scale) / 2 / scale );
-      }
-
-      //center horizontally
-      else {
-        homeScreen.translate( (width - Layout.width * scale) / 2 / scale, 0 );
-      }
+      //40 px high on Mobile Safari
+      var navBarHeight = scale * 40;
+      sim.navigationBarScene.layout( scale, width, navBarHeight );
+      sim.scene.resize( width, height - navBarHeight );
 
       //Layout each of the tabs
-      _.each( tabs, function ( m ) { m.view.layout( width, height - navigationBar.height ); } );
+      _.each( tabs, function( m ) { m.view.layout( width, height - sim.navigationBarScene.height ); } );
 
       //Startup can give spurious resizes (seen on ipad), so defer to the animation loop for painting
     }
 
     //Instantiate the tabs
     //Currently this is done eagerly, but this pattern leaves open the door for loading things in the background.
-    _.each( tabs, function ( m ) {
+    _.each( tabs, function( m ) {
       m.model = m.createModel();
       m.view = m.createView( m.model );
     } );
@@ -126,7 +118,7 @@ define( function ( require ) {
     //SR: ModuleIndex should always be defined.  On startup tabIndex=0 to highlight the 1st tab.
     //    When moving from a tab to the homescreen, the previous tab should be highlighted
     //When the user selects a different tab, show it on the screen
-    this.simModel.link( 'tabIndex', function ( tabIndex ) {
+    this.simModel.link( 'tabIndex', function( tabIndex ) {
       viewContainer.children = [tabs[tabIndex].view];
       updateBackground();
     } );
@@ -138,7 +130,7 @@ define( function ( require ) {
     resize();
   }
 
-  Sim.prototype.start = function () {
+  Sim.prototype.start = function() {
     var sim = this;
 
     //Make sure requestAnimationFrame is defined
@@ -155,7 +147,34 @@ define( function ( require ) {
         sim.tabs[sim.simModel.tabIndex].model.step( dt );
       }
       sim.scene.updateScene();
+      sim.navigationBarScene.updateScene();
+      sim.homeScreenScene.updateScene();
+      for ( var i = 0; i < sim.overlays.length; i++ ) {
+        var overlay = sim.overlays[i];
+        overlay.updateScene();
+      }
     })();
+  };
+
+  //Adds a node to a new scenery.Scene that will be managed by this Sim.  Has a background shading so it will focus on the specified node.
+  //Used for about dialogs and other focusing popups.
+  Sim.prototype.createAndAddOverlay = function( node ) {
+    var $overlayDiv = $( "<div>" ).attr( 'class', 'sim-overlay' ).css( 'position', 'absolute' ).css( 'z-index', 999 ).css( 'background-color', 'rgba(0,0,0,0.5)' );
+    $( 'body' ).append( $overlayDiv );
+
+    var scene = new Scene( $overlayDiv, {allowDevicePixelRatioScaling: true} );
+    scene.initializeStandaloneEvents(); // sets up listeners on the document with preventDefault(), and forwards those events to our scene
+    scene.resizeOnWindowResize();
+
+    scene.addChild( node );
+    scene.updateScene();
+    this.overlays.push( scene );
+    return scene;
+  };
+
+  Sim.prototype.removeOverlay = function( scene ) {
+    this.overlays.splice( this.overlays.indexOf( scene ), 1 );
+    scene.$main.detach();
   };
 
   return Sim;
